# rgu-labs-term4-arithmetic

./: .gitignore  CMakeLists.txt  Makefile
include/: composite_rational_function.hpp  fft.hpp  gf2n.hpp  limit.hpp  matrix.hpp  newton_system.hpp  poly_tostring.hpp  polynomial.hpp  power_series.hpp  rational_function.hpp  root_finding.hpp  simple_iteration.hpp  vector.hpp
src/: 111.cpp  112.cpp  113.cpp  114.cpp  115.cpp  121.cpp  131.cpp  132.cpp  133.cpp  134.cpp  138.cpp  211.cpp  212.cpp  213.cpp  214.cpp  215.cpp  2211.cpp  22124.cpp  2223016.cpp  222303.cpp  22346441.cpp  313.cpp  314.cpp  315.cpp  3210.cpp  326.cpp  327.cpp  328.cpp  329.cpp  3313.cpp  CMakeLists.txt
